--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Dinámico</title>
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">>
 </head>
 <body>
     <div class="container">
