--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </form>
         <div id="message"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
